k8s/overlays/uksouth/patches/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: ticketing
spec:
  template:
    spec:
      containers:
        - name: api
          image: ${ACR_LOGIN_SERVER}/ticketing-api:${IMAGE_TAG_API}
