k8s/overlays/uksouth/patches/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ticketing
  namespace: ticketing
  annotations:
    alb.networking.azure.io/alb-id: ${AGC_ID}
    alb.networking.azure.io/alb-frontend: ${AGC_FRONTEND_ID}
